--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,11 @@
             <version>4.5.0</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.dataformat</groupId>
+            <artifactId>jackson-dataformat-yaml</artifactId>
+            <version>2.13.3</version>
+        </dependency>
 
     </dependencies>
 
